ci: update requirements
