# app/models.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  openapi.yml
-#   timestamp: 2023-03-27T03:19:12+00:00
+#   timestamp: 2023-03-31T22:10:19+00:00
 
 from __future__ import annotations
 
@@ -22,6 +22,27 @@ class Cpf(BaseModel):
 
 class Cnpj(BaseModel):
     __root__: constr(regex=r'\d{14}') = Field(..., example='31846757000124')
+
+
+class UserProvider(BaseModel):
+    id: ObjectId
+    cnpj: Optional[Cnpj] = None
+    name: str = Field(..., example='IPETS SERVICOS SA')
+    email: EmailStr = Field(..., example='ariel.silva@ipets.com')
+    address: ObjectId
+    bankAccount: ObjectId
+    avatar: Optional[str] = Field(None, example='U3dhZ2dlciByb2Nrcw==')
+
+
+class UserConsumer(BaseModel):
+    id: ObjectId
+    cpf: Optional[Cpf] = None
+    name: str = Field(..., example='Ariel Silva dos Santos')
+    email: EmailStr = Field(..., example='ariel.silva@ipets.com')
+    address: ObjectId
+    creditCard: ObjectId
+    avatar: Optional[str] = Field(None, example='U3dhZ2dlciByb2Nrcw==')
+    pets: List[ObjectId]
 
 
 class Address(BaseModel):
@@ -51,7 +72,11 @@ class CreditCard(BaseModel):
 
 class Service(BaseModel):
     id: ObjectId
-    serviceType: str = Field(..., example='Tosa')
+    name: str = Field(..., example='Tosa')
+    description: Optional[str] = Field(
+        None,
+        example='Oferecemos servicos de tosa para cachorros de pequeno e medio porte.',
+    )
     price: float = Field(..., example=89.9)
     providerId: ObjectId
 
@@ -85,7 +110,11 @@ class RequestList(BaseModel):
 
 
 class ServiceData(BaseModel):
-    serviceType: str = Field(..., example='Tosa')
+    name: str = Field(..., example='Tosa')
+    description: Optional[str] = Field(
+        None,
+        example='Oferecemos servicos de tosa para cachorros de pequeno e medio porte.',
+    )
     price: float = Field(..., example=89.9)
     providerId: ObjectId
 
@@ -101,8 +130,8 @@ class UserProviderData(BaseModel):
     name: str = Field(..., example='IPETS SERVICOS SA')
     email: EmailStr = Field(..., example='ariel.silva@ipets.com')
     password: Optional[SecretStr] = None
-    address: Address
-    bankAccount: BankAccount
+    address: ObjectId
+    bankAccount: ObjectId
     avatar: Optional[str] = Field(None, example='U3dhZ2dlciByb2Nrcw==')
 
 
@@ -111,8 +140,8 @@ class UserConsumerData(BaseModel):
     name: str = Field(..., example='Ariel Silva dos Santos')
     email: EmailStr = Field(..., example='ariel.silva@ipets.com')
     password: SecretStr
-    address: Address
-    creditCard: CreditCard
+    address: ObjectId
+    creditCard: ObjectId
     avatar: Optional[str] = Field(None, example='U3dhZ2dlciByb2Nrcw==')
     pets: List[UUID]
 
@@ -148,24 +177,3 @@ class PetData(BaseModel):
         None,
         example='Possui pedigree e foi comprado do criador "Chacara dos Dogues Alemaes".',
     )
-
-
-class UserProvider(BaseModel):
-    id: ObjectId
-    cnpj: Optional[Cnpj] = None
-    name: str = Field(..., example='IPETS SERVICOS SA')
-    email: EmailStr = Field(..., example='ariel.silva@ipets.com')
-    address: Address
-    bankAccount: BankAccount
-    avatar: Optional[str] = Field(None, example='U3dhZ2dlciByb2Nrcw==')
-
-
-class UserConsumer(BaseModel):
-    id: ObjectId
-    cpf: Optional[Cpf] = None
-    name: str = Field(..., example='Ariel Silva dos Santos')
-    email: EmailStr = Field(..., example='ariel.silva@ipets.com')
-    address: Address
-    creditCard: CreditCard
-    avatar: Optional[str] = Field(None, example='U3dhZ2dlciByb2Nrcw==')
-    pets: List[UUID]
